--- a/app/scss/_highcharts.scss
+++ b/app/scss/_highcharts.scss
@@ -50,9 +50,7 @@
   
   .highcharts-tracker-line {
     stroke-linejoin: round;
-    stroke: $slate-secondary-5;
-    stroke-width: 1.5;
-    stroke-dasharray: 4;
+    stroke-width: 3px;
     fill: none;
   }
   
@@ -84,9 +82,9 @@
   .highcharts-yaxis-labels {
     fill: $slate-secondary-5;
     // use this to change the axis label
-    & span:first-child {
-      &:after {
-        content: "%";
+    & span:last-child {
+      &:before {
+        content: "$";
     }
     }
   }
