--- a/app/scss/_social.scss
+++ b/app/scss/_social.scss
@@ -17,10 +17,10 @@
         display: block;
         margin-left: 30px;
         font-size: 28px;
-        margin-bottom: -46px !important;
+        margin-bottom: 30px !important;
     }
     & .chart-container {
-        min-height: 520px;
+        min-height: 450px;
         margin-left: 10px;
         width: 80%;
     }
@@ -32,9 +32,9 @@
         letter-spacing: normal;
         font-weight: 600;
         margin-top: -270px;
-        margin-right: 80px;
+        margin-right: 60px;
         @include sm-md-xl {
-            width: 160px;
+            width: 180px;
             float: right;
         }
     }
@@ -71,4 +71,8 @@
         fill: $slate-secondary-3;
         stroke: $slate-secondary-3;
     }
+
+    & .highcharts-tracker-line {
+        stroke-width: 6px;
+      }
 }
